examples/test/testpolicy15510.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15510
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key16: value32
      key14: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value26
          key15: value32
          key31: value27
      podSelector:
        matchLabels:
          key31: value28
          key33: value41
          key40: value23
